syntax="proto3";

package todoserver;
import "google/protobuf/timestamp.proto";

message ToDo{
    int64 Id=1;
    string Username=2;
    string Title=3;
    string Tag=4;
    string Description=5;
    google.protobuf.Timestamp CreateTime=6;
}

message ToDoRequest{
    ToDo todo=1;
}

message IdResponse{
    int64 Id=1;
}

message DeleteRequest{
    string Username=1;
    int64 Id=2;
}

message DeleteResponse{
    int64 success=1;
}

message GetByTagRequest{
    string Username=1;
    int64 page=2;
    string tag=3;
}

message GetByTagResponse{
    int64 count=1;
    repeated ToDo todos=2;
}

message GetByIdRequest{
    string Username=1;
    int64 Id=2;
}

message GetByIdResponse{
    ToDo todo=2;
}

service ToDoService{
    rpc Create (ToDoRequest) returns (IdResponse);
    rpc Update (ToDoRequest) returns (IdResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc GetByTag (GetByTagRequest) returns (GetByTagResponse);
    rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}